add endpoint patch
