# docs/swagger.json
@@ -148,6 +148,47 @@
                 }
             }
         },
+        "/categories/active/{id}": {
+            "patch": {
+                "description": "Update a category activation status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Update a category status by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Category ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Category DTO Active",
+                        "name": "categoryActive",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CategoryDTOActive"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.CategoryDTO"
+                        }
+                    }
+                }
+            }
+        },
         "/categories/{id}": {
             "get": {
                 "description": "Retrieve a category by its ID",
@@ -296,6 +337,14 @@
                 "name": {
                     "type": "string",
                     "maxLength": 50
+                }
+            }
+        },
+        "dto.CategoryDTOActive": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
                 }
             }
         }
